--- a/web/components/Canvas/Canvas.module.scss
+++ b/web/components/Canvas/Canvas.module.scss
@@ -1,20 +1,9 @@
 .Canvas {
   display: flex;
   justify-content: center;
-  background-color: black;
-  width: 100%;
-  height: 100%;
+  background-color: whitesmoke;
+  min-width: 100vh;
+  min-height: 100vh;
   padding: 0;
   text-align: center;
-
-  .box {
-    background-color: #aaaaaa;
-    width: min(100vw - 400px, 100vh);
-    height: min(100vw - 400px, 100vh);
-  }
-
-  .sidebar {
-    width: 400px;
-    background-color: blue;
-  }
 }
