--- a/web/components/Canvas/Canvas.module.scss
+++ b/web/components/Canvas/Canvas.module.scss
@@ -2,8 +2,16 @@
   display: flex;
   justify-content: center;
   background-color: whitesmoke;
+  &.inGame {
+    background-color: black;
+  }
   min-width: 100vh;
   min-height: 100vh;
   padding: 0;
   text-align: center;
+
+  .box {
+    display: flex;
+    flex-direction: row;
+  }
 }
