--- a/web/components/Canvas/Canvas.module.scss
+++ b/web/components/Canvas/Canvas.module.scss
@@ -5,13 +5,17 @@
   &.inGame {
     background-color: black;
   }
-  min-width: 100vh;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   padding: 0;
   text-align: center;
 
-  .box {
+  .container {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 }
