--- a/web/components/Canvas/MainMenu/MainMenu.module.scss
+++ b/web/components/Canvas/MainMenu/MainMenu.module.scss
@@ -1,27 +1,28 @@
 .MainMenu {
   display: flex;
   justify-content: center;
-  margin-top: 50%;
-  min-width: 700px;
-  min-height: 500px;
-
-  .lineBreak {
-    width: 90%;
-  }
+  padding: 24px;
+  max-width: 800px;
 
   .menuTitle {
-    margin-top: 10%;
-    margin-bottom: 3%;
+    padding-bottom: 24px;
     font-size: 36px;
     font-weight: bold;
   }
 
   .createGame {
-    margin-top: 10%;
-    margin-bottom: 10%;
+    padding: 24px 0;
   }
 
   .joinGame {
-    margin-top: 10%;
+    padding-top: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .button {
+      padding-left: 24px;
+    }
   }
 }
