--- a/web/components/Canvas/Board/Board.module.scss
+++ b/web/components/Canvas/Board/Board.module.scss
@@ -11,5 +11,39 @@
     width: 100%;
     overflow-wrap: anywhere;
   }
+}
 
+.colonelMustard,
+.missScarlet,
+.professorPlum,
+.mrGreen,
+.mrsWhite,
+.mrsPeacock {
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+}
+
+.mrsWhite {
+  background-color: lightslategrey;
+}
+
+.missScarlet {
+  background-color: red;
+}
+
+.colonelMustard {
+  background-color: yellow;
+}
+
+.mrGreen {
+  background-color: green;
+}
+
+.professorPlum {
+  background-color: purple;
+}
+
+.mrsPeacock {
+  background-color: navy;
 }
