15 display a game board (#35)
* placeholder board image

* highest res images I could find

* added grid for board

* missing line

* notes

* 14 distribute player cards (#32)

* 28 make player action options disappear when clicked or cancelled (#29)

* Move options disappear when clicked; secret passage bug fix

* Change 'cancel' to 'clear' for suggestions and accusations to better reflect actual functionality

* make card assets

* working card display

Co-authored-by: rachelnewkirk <rachelnewkirk7@gmail.com>
Co-authored-by: jsquires0 <45380991+jsquires0@users.noreply.github.com>

* adding token css

* moving game history to chat/sidebar -- incomplete

* displaying tokens on rooms

* basic functionality done

* clean up

* Update web/components/Canvas/Board/Cards/Cards.module.scss

Co-authored-by: Ben Ferro <43210381+benferro@users.noreply.github.com>

Co-authored-by: David Liu <zliu3301@gmail.com>
Co-authored-by: rachelnewkirk <rachelnewkirk7@gmail.com>
Co-authored-by: Melissa Appel <43053575+melissaleighweber@users.noreply.github.com>
Co-authored-by: Ben Ferro <43210381+benferro@users.noreply.github.com>

--- a/web/components/Canvas/Board/Board.module.scss
+++ b/web/components/Canvas/Board/Board.module.scss
@@ -11,5 +11,44 @@
     width: 100%;
     overflow-wrap: anywhere;
   }
+}
 
+.colonelMustard,
+.missScarlet,
+.professorPlum,
+.mrGreen,
+.mrsWhite,
+.mrsPeacock,
+.debug {
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+}
+
+.mrsWhite {
+  background-color: lightslategrey;
+}
+
+.missScarlet {
+  background-color: red;
+}
+
+.colonelMustard {
+  background-color: yellow;
+}
+
+.mrGreen {
+  background-color: green;
+}
+
+.professorPlum {
+  background-color: purple;
+}
+
+.mrsPeacock {
+  background-color: navy;
+}
+
+.debug {
+  background-color: rgb(0, 0, 0, 0);
 }
