--- a/web/components/Canvas/Canvas.module.scss
+++ b/web/components/Canvas/Canvas.module.scss
@@ -1,10 +1,13 @@
 .Canvas {
   display: flex;
+  overflow: hidden;
   justify-content: center;
   background-color: whitesmoke;
+
   &.inGame {
     background-color: black;
   }
+
   width: 100vw;
   height: 100vh;
   padding: 0;
