--- a/web/components/Canvas/Sidebar/Sidebar.module.scss
+++ b/web/components/Canvas/Sidebar/Sidebar.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   background-color: lightgrey;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   height: min(100vw - 300px, 100vh);
   width: 300px;
