--- a/web/components/Canvas/Board/CharSelect/CharSelect.module.scss
+++ b/web/components/Canvas/Board/CharSelect/CharSelect.module.scss
@@ -1,4 +1,11 @@
 .CharSelect {
   display: flex;
   border: 1px solid black;
+
+  .suspect {
+    &:hover {
+      border: 3px solid teal;
+      filter: brightness(95%);
+    }
+  }
 }
