fleshed out suggestion bugs

--- a/web/components/Canvas/Suggestion/Suggestion.module.scss
+++ b/web/components/Canvas/Suggestion/Suggestion.module.scss
@@ -1,3 +1,10 @@
-.Board {
-  
+.Suggestion {
+
+.disprovalCard {
+    position: relative;
+    width: 100px;
+    margin-left: -50px;
+    overflow-x: hidden;
+    border: 1px solid black;
+}
 }
