--- a/web/components/Canvas/Suggestion/Suggestion.module.scss
+++ b/web/components/Canvas/Suggestion/Suggestion.module.scss
@@ -1,10 +1,16 @@
 .Suggestion {
+    display: flex;
 
-.disprovalCard {
-    position: relative;
-    width: 100px;
-    margin-left: -50px;
-    overflow-x: hidden;
-    border: 1px solid black;
-}
+    .disprovalCard {
+        position: relative;
+        width: 100px;
+        margin-left: -50px;
+        overflow-x: hidden;
+        border: 1px solid black;
+        &:hover {
+        transform: scale(1.2);
+        z-index: 10;
+        bottom: 16px;
+        }
+    }
 }
